add HTTPClient methods + Album & AlbumView models

--- a/DesignPatterns/Base.lproj/Main.storyboard
+++ b/DesignPatterns/Base.lproj/Main.storyboard
@@ -90,6 +90,10 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Pop Music" id="dPd-Zv-mjl"/>
+                    <connections>
+                        <outlet property="dataTable" destination="IRz-sH-XcZ" id="URK-SK-pWs"/>
+                        <outlet property="toolBar" destination="qje-Fn-ZDq" id="8fz-WZ-aR8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
